# lerobot_robot_franka

./: .gitignore  README.md  pyproject.toml
lerobot_robot_franka/: __init__.py  config_franka.py  franka.py  test_franka.py
